--- a/Ruby/.obsidian/snippets/remove_table_padding_dv.css
+++ b/Ruby/.obsidian/snippets/remove_table_padding_dv.css
@@ -1,3 +1,5 @@
+
+.cm-embed-block.markdown-rendered .block-language-dataview,
 .markdown-rendered table, .markdown-rendered .table-view-table {
     margin-bottom: 0;
    }
